--- a/sass/partials/components/navigation/_extends.scss
+++ b/sass/partials/components/navigation/_extends.scss
@@ -5,6 +5,7 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 5;
+  height: 3.25em;
 }
 
 
@@ -15,9 +16,8 @@
 %navigation--links{
   @extend %p;
   color: $white;
-  display: inline-block;
   text-align: left;
-  padding: 1em 7% 1em 0;
+  display: none;
   &:last-child{
     text-align: center;
   }
@@ -32,6 +32,7 @@
   }
   @include breakpoint($breakpoint--second-layout){
     padding: 1em 10% 1em 0;
+    display: inline-block;
   }
 }
 
